--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
+    "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "react-icons-md": "^1.1.0",
+    "react-moment": "^1.1.1",
     "snowpack": "^3.3.7"
   },
   "dependencies": {
